# nnlens

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DESIGN_related_links.md
examples/: layer_norm.json  transformer_attention.json
scripts/: build_example.py  build_layernorm.py  demo_render.py
src/layerlens/: __init__.py  __main__.py  config.py  models.py  prompts.py  sandbox.py  server.py  sources.py
src/layerlens/renderer/: __init__.py  build.py  server.py  template.html  viewer.js
src/nnlens/: __init__.py  __main__.py  config.py  lint.py  models.py  prompts.py  sandbox.py  server.py  sources.py
src/nnlens/renderer/: __init__.py  build.py  template.html  viewer.js
tests/: test_config.py  test_integration.py  test_lint.py  test_mcp_stdio.py  test_models.py  test_prompts.py  test_renderer.py  test_sandbox.py  test_sources.py
tests/js/: component.test.cjs  package.json  viewer.test.cjs
