[project]
name = "nnlens"
version = "0.1.1"
description = "Explain neural-network architectures layer by layer in five linked views (structure, plain words, math, naive code, optimized code). An MCP server + local renderer driven by your own LLM subscription."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nnlens contributors" }]
keywords = ["mcp", "neural-networks", "education", "explainer", "pytorch"]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
nnlens = "nnlens.__main__:main"

[project.urls]
Homepage = "https://github.com/tsuzakiii/nnlens"
Repository = "https://github.com/tsuzakiii/nnlens"
Issues = "https://github.com/tsuzakiii/nnlens/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nnlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
